--- a/package.json
+++ b/package.json
@@ -4,25 +4,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@ionic/react": "^5.0.7",
-    "@ionic/react-router": "^5.0.7",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.2",
-    "@testing-library/user-event": "^10.0.1",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.4",
+    "@ionic/react": "^5.2.1",
+    "@ionic/react-router": "^5.2.1",
     "ionicons": "^5.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0",
-    "typescript": "3.8.3"
+    "styled-components": "^5.1.1",
+    "typescript": "3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +40,17 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "@types/styled-components": "^5.0.1",
-    "gh-pages": "^2.2.0"
+    "@testing-library/jest-dom": "^5.10.0",
+    "@testing-library/react": "^10.2.1",
+    "@testing-library/user-event": "^11.4.2",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@ionic/react-test-utils": "0.0.3",
+    "@types/styled-components": "^5.1.0",
+    "gh-pages": "^3.0.0"
   }
 }
